--- a/app/src/main/res/layout/fragment_add_manga.xml
+++ b/app/src/main/res/layout/fragment_add_manga.xml
@@ -54,21 +54,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AddMangaSellerName" />
 
-    <EditText
-        android:id="@+id/AddMangaAddres"
-        android:layout_width="0dp"
+    <fragment
+        android:id="@+id/AddManga_autocomplete_fragment"
+        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/Address_Search"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AddMangaTelephone" />
+        app:layout_constraintTop_toBottomOf="@+id/AddMangaTelephone"
+        tools:layout_editor_absoluteX="0dp">
+
+        <Button
+            android:id="@+id/AddManga_MyPositionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Position" />
+    </fragment>
 
     <Button
         android:id="@+id/AddFragementButton"
@@ -83,7 +83,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AddMangaAddres" />
+        app:layout_constraintTop_toBottomOf="@+id/AddManga_autocomplete_fragment" />
 
     <EditText
         android:id="@+id/AddMangaPrice"
