Add volume to views

--- a/app/src/main/res/layout/fragment_add_manga.xml
+++ b/app/src/main/res/layout/fragment_add_manga.xml
@@ -98,8 +98,9 @@
         android:inputType="number"
         android:text="@string/AddMangaFragement_price"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AddMangaName" />
+        app:layout_constraintTop_toBottomOf="@+id/AddMangaVolume" />
 
     <ProgressBar
         android:id="@+id/AddMangaFragmentprogressBar"
@@ -117,4 +118,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/AddMangaVolume"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/AddMangaFragment_Volume"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AddMangaName" />
 </android.support.constraint.ConstraintLayout>
