--- a/app/src/main/res/layout/activity_item_manga.xml
+++ b/app/src/main/res/layout/activity_item_manga.xml
@@ -6,6 +6,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@android:drawable/ic_input_add"
+        android:id="@+id/listImageView"
+
         />
 
     <LinearLayout
