--- a/app/src/main/res/layout/fragment_add_manga.xml
+++ b/app/src/main/res/layout/fragment_add_manga.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".AddMangaFragment">
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/AddMangaName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
         android:layout_marginRight="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/AddMangaFragement_name"
+        android:hint="@string/AddMangaFragement_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +33,7 @@
         android:layout_marginRight="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/AddMangaFragement_sellerName"
+        android:hint="@string/AddMangaFragement_sellerName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AddMangaPrice" />
@@ -49,7 +49,7 @@
         android:layout_marginRight="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/AddMangaFragement_telephone"
+        android:hint="@string/AddMangaFragement_telephone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AddMangaSellerName" />
@@ -96,7 +96,7 @@
         android:layout_marginRight="16dp"
         android:ems="10"
         android:inputType="number"
-        android:text="@string/AddMangaFragement_price"
+        android:hint="@string/AddMangaFragement_price"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -129,8 +129,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/AddMangaFragment_Volume"
+        android:inputType="number"
+        android:hint="@string/AddMangaFragment_Volume"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AddMangaName" />
