--- a/app/src/main/res/layout/activity_my_manga_details.xml
+++ b/app/src/main/res/layout/activity_my_manga_details.xml
@@ -78,7 +78,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myMangamangaName" />
+        app:layout_constraintTop_toBottomOf="@+id/MyMangaVolume" />
 
     <View
         android:id="@+id/divider2"
@@ -120,5 +120,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/myMangatelephone" />
+
+    <TextView
+        android:id="@+id/MyMangaVolume"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myMangamangaName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
