--- a/app/src/main/res/layout/fragment_add_manga.xml
+++ b/app/src/main/res/layout/fragment_add_manga.xml
@@ -79,7 +79,7 @@
         android:layout_marginTop="52dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="Button"
+        android:text="ADD"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
